--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,4 +12,17 @@
  *
  *= require_tree .
  *= require_self
+ *= require foundation_and_overrides
+
  */
+ header img {
+   height: 2.2rem;
+   width: 2.2rem;
+   -webkit-border-radius: 2px;
+   -moz-border-radius: 2px;
+   border-radius: 2px;
+ }
+
+ header ul.right li:first-child {
+   line-height: 2.63rem;
+ }
