--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,34 +14,9 @@
 
   <body>
 
-  <header class="contain-to-grid sticky">
-    <nav class="top-bar" data-topbar role="navigation">
-      <ul class="title-area">
-        <li class="name">
-          <h1><a href="/">Devise Oauth</a></h1>
-        </li>
-        <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-        <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
-      </ul>
 
-      <section class="top-bar-section">
-        <!-- Right Nav Section -->
-        <ul class="right">
-          <% if user_signed_in? %>
-            <% if current_user.image.present? %>
-              <li><%= image_tag(current_user.image) %></li> 
-            <% end %>
-            <li><%= link_to current_user.name, current_user %></li>
-            <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li> 
-          <% else %>
-            <li><%= link_to "Register", new_user_registration_path %></li>
-            <li><%= link_to "Login", new_user_session_path %></li>
-          <% end %>
-        </ul>
-      </section>
-    </nav>
-  </header>
-
+  <%= render "header" %>
+  <%= render "flash_messages" %>
   <main>
   <div class="row">
     <%= yield %>
