added first name and last name to users and into a new user seed and the registration form includes first and last name

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -13,14 +13,21 @@
       <ul class="right">
         <% if user_signed_in? %>
           <% if current_user.image.present? %>
+
             <li><%= image_tag(current_user.image) %></li> 
+            
           <% end %>
+
           <li><%= link_to current_user.name, current_user %></li>
+          <li><%= link_to "Users", users_path %></li> 
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li> 
+      
         <% else %>
+
           <li><%= link_to "Register", new_user_registration_path %></li>
           <li><%= link_to "Join Us!", new_user_registration_path %></li>
           <li><%= link_to "Login", new_user_session_path %></li>
+
         <% end %>
       </ul>
     </section>
