trying to save first name and last name to user but not saving on registration or on edit form

--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -8,7 +8,9 @@
     <p class="card-text"><%= user.email %></p>
     <p class="card-text"><%= user.role %></p>
     <p class="card-text"><%= user.username %></p>
+    <li><%= link_to "Edit", edit_user_path %></li> 
     <p class="card-text"><small class="text-muted">Joined <%= distance_of_time_in_words(Time.now, user.created_at) %> ago</small></p>
+
   </div>
 </div>
 
