--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,14 +3,17 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
+
+<!-- QUESTION: WHY ARE THE FIRST NAME AND LAST NAME FIELDS NOT UPDATING/SAVING ON REGISTRATION -->
+
   <div class="field">
     <%= f.label :first_name %><br />
-    <%= f.email_field :first_name, autofocus: true %>
+    <%= f.text_field  :first_name, autofocus: true %>
   </div>
 
   <div class="field">
     <%= f.label :last_name %><br />
-    <%= f.email_field :last_name %>
+    <%= f.text_field  :last_name %>
   </div>
 
   <div class="field">
