--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,8 +1,10 @@
 <h1>All Users</h1>
 <ul>
+  <div class="row">
     <%= render @users %>
+  </div>
 </ul>
 
 <% @users.each do |user| %>
-  <%= user.inspect %>
+<%= user.inspect %>
 <% end %>
