--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,44 +1,21 @@
-<div class="card">
-  <div class="card-block">
-  <div class="image">
-    <img src="<%= user.image %>">
-    <span class="title">Road Warrior</span>
-  </div>
-    <h4 class="card-title"><%= link_to user.username, user %></h4>
-    <p class="card-text"><%= user.email %></p>
-    <p class="card-text"><%= user.role %></p>
-    <p class="card-text"><%= user.username %></p>
-    <li><%= link_to "Edit", edit_user_path %></li> 
-    <p class="card-text"><small class="text-muted">Joined <%= distance_of_time_in_words(Time.now, user.created_at) %> ago</small></p>
 
-  </div>
-</div>
-
-<!-- <div class="row">
-  <div class="medium-4 columns">
+  <div class="medium-12 columns">
     <div class="card">
-      <div class="image">
-        <img src="http://static.pexels.com/wp-content/uploads/2014/07/alone-clouds-hills-1909-527x350.jpg">
-        <span class="title">Road Warrior</span>
+    <div class="row">
+      <div class="image medium-3 columns">
+        <img src="<%= user.image %>">
+        <span class="title"><%= user.username %></span>
       </div>
-      <div class="content">
+      <div class="content medium-9 columns">
         <p>I shall be telling this with a sigh  . Somewhere ages and ages hence:   Two roads diverged in a wood, and I —   I took the one less traveled by.  And that has made all the difference.</p>
+        <p class="card-text"><%= user.email %></p>
+        <p class="card-text"><%= user.role %></p>
+        <p class="card-text"><%= user.username %></p>
+        <p class="card-text"><small class="text-muted">Joined <%= distance_of_time_in_words(Time.now, user.created_at) %> ago</small></p>
       </div>
       <div class="action">
-        <a href='#'>Where this leads</a>
+        <a href='#'>View</a>
+      </div>
       </div>
     </div>
   </div>
-  <div class="medium-6 columns end">
-    <div class="card">
-      <div class="content">
-        <span class="title">Robert Frost</span>
-        <p>Two roads diverged in a yellow wood,  And sorry I could not travel both   And be one traveler, long I stood   And looked down one as far as I could  . To where it bent in the undergrowth;</p>
-      </div>
-      <div class="action">
-        <a href='#'>This is a link</a>
-        <a href='#'>This is a link</a>
-      </div>
-    </div>
-  </div>
-</div> -->
