--- a/app/views/consultations/index.html.erb
+++ b/app/views/consultations/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Consultations#index</h1>
-<p>Find me in app/views/consultations/index.html.erb</p>
+<h1>All Consultations</h1>
+<div class="card-deck-wrapper">
+  <div class="card-deck">
+    <%= render @consultations %>
+  </div>
+</div>
