--- a/app/views/consultations/new.html.erb
+++ b/app/views/consultations/new.html.erb
@@ -1,2 +1,29 @@
 <h1>Consultations#new</h1>
 <p>Find me in app/views/consultations/new.html.erb</p>
+
+<h1>Add a new consultation</h1>
+<%= form_for @consultation do |f| %>
+  <% if @consultation.errors.any? %>
+    <% for message in @consultation.errors.full_messages %>
+      <div class="alert alert-danger" role="alert">
+        <%= message %>
+      </div>
+    <% end %>
+  <% end %>
+
+  <fieldset class="form-group">
+    <%= f.label :type_of %>
+    <%= f.text_field :type_of, class: "form-control" %>
+  </fieldset>
+  <fieldset class="form-group">
+    <%= f.label :brief %>
+    <%= f.text_area :brief, class: "form-control" %>
+  </fieldset>
+  <fieldset class="form-group">
+    <%= f.label :image %>
+    <%= f.text_field :image, class: "form-control" %>
+  </fieldset>
+  
+  <%= f.submit class: "btn btn-primary" %>
+
+<% end %>
