--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Consultations#show</h1>
-<p>Find me in app/views/consultations/show.html.erb</p>
+<h1>Check Consultations</h1>
+<div class="card-deck-wrapper">
+  <div class="card-deck">
+    <%= render @consultation %>
+  </div>
+</div>
