--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,2 +1,11 @@
 <h1>Statics#home</h1>
 <p>Find me in app/views/statics/home.html.erb</p>
+<div class="jumbotron">
+  <h1 class="display-3">Welcome to Heal</h1>
+  <p class="lead">The fastest and most reliable way to get healed</p>
+  <hr class="m-y-2">
+  <p>Connecting You With The Best Doctors In The World, Instantly</p>
+  <p class="lead">
+    <%= link_to "Browse Doctors", users_path, class: "btn btn-primary btn-lg", role: "button" %>
+  </p>
+</div>
