--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,4 +3,11 @@
     <%= render @user %>
 </ul>
 
+<h1><%= @user.username %></h1>
+<div class="card-deck-wrapper">
+  <div class="card-deck">
+    <%= render @user.consultations %>
+  </div>
+</div>
+
 <%= @user.inspect %>
