--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -18,6 +18,13 @@
             
           <% end %>
 
+          <li class="nav-item">
+            <%= link_to "Inbox", inbox_path, class: "nav-link" %>
+          </li>
+          <li>
+            <%= link_to "Outbox", outbox_path, class: "nav-link" %>
+          </li>
+
           <li>
             <%= link_to "List Cases", consultations_path, class: "nav-link" %>
           </li>
