--- a/app/views/enquiries/new.html.erb
+++ b/app/views/enquiries/new.html.erb
@@ -10,12 +10,16 @@
   <% end %>
 
     <fieldset class="form-group">
-      <%= f.label :details %>
-      <%= f.text_area :details, class: "form-control" %>
+      <%= f.label :type_of %>
+      <%= f.text_field :type_of, class: "form-control" %>
     </fieldset>
     <fieldset class="form-group">
-      <%= f.label :deadline %>
-      <%= f.date_field :deadline, class: "form-control" %>
+      <%= f.label :brief %>
+      <%= f.text_area :brief, class: "form-control" %>
+    </fieldset>
+    <fieldset class="form-group">
+      <%= f.label :image %>
+      <%= f.text_field :image, class: "form-control" %>
     </fieldset>
     <%= f.submit class: "btn btn-primary" %>
   <% end %>
