--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -2,5 +2,11 @@
 <div class="card-deck-wrapper">
   <div class="card-deck">
     <%= render @consultation %>
+    <div class="medium-9 columns comments_form">
+      <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
+      
+        <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
+
+    </div>
   </div>
 </div>
