--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -2,6 +2,7 @@
 <div class="card-deck-wrapper">
   <div class="card-deck">
     <%= render @consultation %>
+    <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "btn-btn-primary" %>
     <div class="medium-9 columns comments_form">
       <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
       
