--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -11,6 +11,12 @@
     <section class="top-bar-section">
       <!-- Right Nav Section -->
       <ul class="right">
+
+
+      <li class="nav-item">
+        <%= link_to "Pending", pending_treatments_path, class: "nav-link" %>
+      </li>
+
         <% if user_signed_in? %>
           <% if current_user.image.present? %>
 
