--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,5 +1,5 @@
 <h1>Check Consultations</h1>
-<div class="card-deck-wrapper">
+<div class="card-deck-wrapper rounded">
   <div class="card-deck">
     <%= render @consultation %>
     <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "btn-btn-primary" %>
