--- a/app/views/statics/home.html.erb
+++ b/app/views/statics/home.html.erb
@@ -1,5 +1,4 @@
-<h1>Statics#home</h1>
-<p>Find me in app/views/statics/home.html.erb</p>
+
 <div class="jumbotron">
   <h1 class="display-3">Welcome to Heal</h1>
   <p class="lead">The fastest and most reliable way to get healed</p>
@@ -8,4 +7,27 @@
   <p class="lead">
     <%= link_to "Browse Doctors", users_path, class: "btn btn-primary btn-lg", role: "button" %>
   </p>
+</div>
+
+<div class="row">
+  <ul class="accordion animated" data-accordion>
+    <li class="accordion-navigation">
+      <a href="#panel1a"><span>Accordion 1</span></a>
+      <div id="panel1a" class="content active">
+        <div>Panel 1. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </li>
+    <li class="accordion-navigation">
+      <a href="#panel2a"><span>Accordion 2</span></a>
+      <div id="panel2a" class="content">
+        <div>Panel 2. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </li>
+    <li class="accordion-navigation">
+      <a href="#panel3a"><span>Accordion 3</span></a>
+      <div id="panel3a" class="content">
+        <div>Panel 3. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</div>
+      </div>
+    </li>
+  </ul>
 </div>
