--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,6 @@
-<h1>All Users</h1>
+<h1>Below is a list of our doctors</h1>
 <ul>
   <div class="row">
     <%= render @users %>
   </div>
 </ul>
-
-<% @users.each do |user| %>
-<%= user.inspect %>
-<% end %>
