--- a/app/views/consultations/_consultation.html.erb
+++ b/app/views/consultations/_consultation.html.erb
@@ -1,6 +1,9 @@
 <div class="medium-12 columns">
   <div class="card">
   <div class="row">
+  <div class="content medium-12 columns topper">
+  <%= consultation.type_of %>
+  </div>
     <div class="image medium-3 columns"> 
     <%= image_tag consultation.image %>
       <span class="title"><%= consultation.type_of %></span>
