--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -77,7 +77,81 @@
        padding: 1.3rem;
        color: #fff; }
      .card .image img {
-       border-radius: 2px 2px 0 0; }
+       border-radius: 2px 2px 0 0; 
+      margin: 1.3em;}
+
+       .card {
+         position: relative;
+         padding: 0;
+         margin: 0;
+         -webkit-perspective: 5000;
+         perspective: 5000; 
+       }
+
+       .card .container {
+         -webkit-transform-style: preserve-3d;
+         transform-style: preserve-3d;
+         -webkit-transition: 0.6s;
+         transition: 0.6s; 
+         border: 0;
+       }
+
+       .card .container .front, .card .container .back {
+         width: 100%;
+         -webkit-backface-visibility: hidden;
+         backface-visibility: hidden; 
+         border: none;
+       }
+
+       .card .container .front .row, .card .container .front .column, .card .container .front .columns, .card .container .back .row, .card .container .back .column, .card .container .back .columns {
+         -webkit-backface-visibility: hidden;
+         backface-visibility: hidden; 
+       }
+
+       .card .container .front {
+         z-index: 2; 
+       }
+
+       .card .container .back {
+         position: absolute;
+         height: 100%;
+         left: 0;
+         top: 0;
+         overflow-y: scroll;
+         -webkit-transform: rotateY(180deg);
+         transform: rotateY(180deg); 
+       }
+
+       .card .container:hover {
+         -webkit-transform: rotate3d(0, 1, 0, 180deg);
+         transform: rotate3d(0, 1, 0, 180deg); 
+       }
+
+       .card .container {
+         border: none; 
+       }
+
+       .card .container .front {
+         padding: 0em; 
+       }
+
+       .card .container .back {
+         padding: 1em; 
+       }
+
+       .card.square .container {
+         width: 100%;
+         height: 0;
+         padding-bottom: 100%; 
+       }
+
+
+       .expand {
+           height: 1em;
+           width: 100%;
+           padding: 3px;
+       }
+
 
 
 .comment_patient{
