--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1381,7 +1381,7 @@ $include-html-global-classes: $include-html-classes;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
- $topbar-bg-color: #859592; // $oil;
+ $topbar-bg-color: #A0A4A3; // $oil;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
