--- a/app/views/consultations/_consultation.html.erb
+++ b/app/views/consultations/_consultation.html.erb
@@ -1,37 +1,42 @@
-<div class="medium-12 columns">
-  <div class="card">
-  <div class="row">
-  <div class="content medium-12 columns topper">
-  <%= consultation.type_of %>
-  </div>
-    <div class="image medium-3 columns"> 
-    <%= image_tag consultation.image %>
-      <span class="title"><%= consultation.type_of %></span>
-    </div>
-    <div class="content medium-9 columns">
-      <p>Here are the details of the consulation.</p>
-      <p class="card-text">User name: <%= consultation.user.username %></p>
 
-      <% if consultation.doctor %>
-
-       <p class="card-text">Assigned to: <%= consultation.doctor.username %></p>
-       
-        <% end %>
-     
-      <p class="card-text">Focus area: <%= consultation.type_of %></p>
-      <p class="card-text">Brief description: <%= consultation.brief %></p>
-      <p class="card-text">Status: <%= consultation.status %></p>
-      <p class="card-text"><small class="text-muted">Added <%= distance_of_time_in_words(Time.now, consultation.created_at) %> ago</small></p>
-    </div>
-    <div class="action">
-      <%= link_to "View in more detail", consultation%>
-      <% if current_user.role == "doctor" && consultation.doctor_id == nil %>
-
-       <%= link_to "Accept", accept_consultation_path(consultation), class: "btn btn-success" %>
+<div class="row split">
+<div class="medium-9 columns">
+  <div class="card whitebg">
+    <div class="row">
+      <div class="content medium-12 columns topper">
+        <p class="biggerp"><%= consultation.type_of %><span class="right"><%= consultation.created_at.strftime("%d/%m/%y")%><span></p>
         
-      <% end %>
+      </div>
+      <div class="image medium-3 columns"> 
+        <%= image_tag consultation.image %>
+        <span class="title"></span>
+      </div>
+      <div class="content medium-9 columns">
+
+
+
+        <p class="card-text"><%= consultation.brief %></p>
+        
+        <p class="card-text"><span class="fieldname">Focus area: </span><%= consultation.type_of %></p>
+        <p class="card-text"><span class="fieldname">Status: </span><%= consultation.status %></p>
+        <p class="card-text"><span class="fieldname"><span class="text-muted">Added </span><%= distance_of_time_in_words(Time.now, consultation.created_at) %> ago</span></p>
+        <% if consultation.doctor %>
+
+        <p class="card-text">Assigned to: <%= consultation.doctor.username %></p>
+
+        <% end %>
+      </div>
+      <div class="action">
+        <% if current_user.role == "doctor" && consultation.doctor_id == nil %>
+
+        <%= link_to "Accept", accept_consultation_path(consultation), class: "button radius btn btn-success" %>
+        
+        <% end %>
+        <%= link_to "View case", consultation_path(consultation), class: "btn btn-success" %>
+
+      </div>
 
     </div>
-    </div>
   </div>
+</div>
 </div>
