--- a/app/views/consultations/show.html.erb
+++ b/app/views/consultations/show.html.erb
@@ -1,19 +1,101 @@
-<h1>Check Consultations</h1>
-<div class="card-deck-wrapper rounded">
-  <div class="card-deck">
-    <%= render @consultation %>
-    <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "btn-btn-primary" %>
-    <div class="medium-9 columns comments_form">
-      <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
-      
-        <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
 
-      <% if !@treatment.nil? %>
-        <%= render partial: "treatments/treatment", object: @treatment, as: 'treatment' %>
-      <% else %>
-        <p>Treatment presciption pending</p>
-      <% end %>
 
+
+<!-- <div class="row"> -->
+  <div class="medium-2 columns healbutton">
+    
+    <% if !@treatment.nil? %>
+    <%= render partial: "treatments/treatment", object: @treatment, as: 'treatment' %>
+    <% else %>
+    <%= link_to "Heal", new_consultation_treatment_path(@consultation), class: "button btn-btn-primary" %>
+    <p>Treatment presciption pending</p>
+    <% end %>
+  </div>
+  
+  <div class="card medium-2 columns">
+    <div class="content medium-12 columns topper">
+      <p class="card-text biggerp smaller">Patient</p>
+    </div>
+    <br>
+    <div class="container">
+      <div class="front bordernone">
+        <%= image_tag @consultation.user.image %>
+      </div>
+      <div class="back">
+        <h5>Patient details</h5>
+        <p class="card-text"><%= @consultation.user.first_name %></p>
+        <p class="card-text"><%= @consultation.user.last_name %></p>
+        <p class="card-text">User name: <%= @consultation.user.email %></p>
+      </div>
+    </div>
+    <div class="content medium-12 columns whitebg">
+      <p class="card-text biggerp smaller"><%= @consultation.user.first_name %></p>
     </div>
   </div>
-</div>
+
+  <div class="medium-8 columns">
+  <div class="card-deck-wrapper rounded">
+    <div class="card-deck">
+        <div class="card whitebg">
+          <div class="row">
+            <div class="content medium-12 columns topper">
+              <p class="biggerp"><%= @consultation.type_of %>
+                <span class="right"><%= @consultation.created_at.strftime("%d/%m/%y")%><span></p>
+                </div>
+                <div class="image medium-3 columns"> 
+                  <%= image_tag @consultation.image %>
+                  <span class="title"></span>
+                </div>
+                <div class="content medium-9 columns">
+
+
+                  <% if @consultation.doctor %>
+
+                  <p class="card-text">Assigned to: <%= @consultation.doctor.username %></p>
+
+                  <% end %>
+
+
+                  <p class="card-text">Focus area: <%= @consultation.type_of %></p>
+                  <p class="card-text"><%= @consultation.brief %></p>
+                  <p class="card-text">Status: <%= @consultation.status %></p>
+                  <p class="card-text"><small class="text-muted">Added <%= distance_of_time_in_words(Time.now, @consultation.created_at) %> ago</small></p>
+
+                  <% if @consultation.status != "pending" %>
+                  <% end %>
+
+
+                  
+
+                  <% if current_user.role == "doctor" && @consultation.doctor_id == nil %>
+                  <div class="action">
+                    <%= link_to "Accept", accept_consultation_path(@consultation), class: "button btn btn-success" %>
+                  </div>
+                  <% end %>
+
+
+
+                </div>
+              </div>
+            </div>      
+
+            <div class="medium-12 columns comments_form">
+              <%= render partial: 'comments/form', locals: { commentable: @consultation } %>
+
+              <%= render partial: 'comments/comment', collection: @comments, locals: { commentable: @consultation } %>
+            </div>
+
+          </div>
+        </div>
+
+
+      </div>
+
+    </div>
+
+
+
+
+  <!-- </div> -->
+
+
