final commit of the day

--- a/app/views/consultations/_consultation.html.erb
+++ b/app/views/consultations/_consultation.html.erb
@@ -4,7 +4,7 @@
   <div class="card whitebg">
     <div class="row">
       <div class="content medium-12 columns topper">
-        <p class="biggerp"><%= consultation.type_of %><span class="right"><%= consultation.created_at.strftime("%d/%m/%y")%><span></p>
+        <p class="biggerp"><%= consultation.type_of %> consultation <span class="right"><%= consultation.created_at.strftime("%d/%m/%y")%><span></p>
         
       </div>
       <div class="image medium-3 columns"> 
