--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -1,12 +1,15 @@
 
-<div class="medium-12 columns">
+
   <div class="card">
   <div class="row">
+  <div class="content topper">
+    <p class="biggerp">Treatment</p>
+  </div>
     <div class="image medium-1 columns"> 
       <%= image_tag(TreatmentType.find(treatment.treatment_type_id).image_path, class: "treatment-icon") %>
     </div>
     <div class="content medium-9 columns">
-      <p class="text-muted">Here are the details of the treatment that was recommended.</p>
+      <small class="text-muted">Here are the details of the treatment that was recommended.</small>
       
       <p class="card-text"><span class="fieldname">for: </span><%= treatment.treatment_for %></p>
       <p class="card-text"><span class="fieldname">Treatment name:</span> <%= treatment.treatment_name %></p>
@@ -22,4 +25,4 @@
     </div>
     </div>
   </div>
-</div>
+
