--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="contain-to-grid sticky">
+<header class="contain-to-grid  headergap">
   <nav class="top-bar" data-topbar role="navigation">
     <ul class="title-area">
       <li class="name">
@@ -93,3 +93,11 @@
     </section>
   </nav>
 </header>
+
+
+
+
+
+
+
+
