--- a/app/views/consultations/_consultation.html.erb
+++ b/app/views/consultations/_consultation.html.erb
@@ -1,4 +1,4 @@
-
+<div>
 <div class="row split">
 <div class="medium-9 columns">
   <div class="card whitebg">
@@ -38,5 +38,6 @@
 
     </div>
   </div>
+</div>
 </div>
 </div>
