--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1382,7 +1382,7 @@ $include-html-global-classes: $include-html-classes;
 
 // Background color for the top bar
  $topbar-bg-color: #A0A4A3; // $oil;
-// $topbar-bg: $topbar-bg-color;
+ $topbar-bg:transparent ;//$topbar-bg-color;
 
 // Height and margin
 // $topbar-height: rem-calc(45);
@@ -1393,18 +1393,18 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-title-font-size: rem-calc(17);
 
 // Set the link colors and styles for top-level nav
-// $topbar-link-color: $white;
+ $topbar-link-color: #06CBC4;
 // $topbar-link-color-hover: $white;
  $topbar-link-color-active: red; // $white;
 // $topbar-link-color-active-hover: $white;
 // $topbar-link-weight: $font-weight-normal;
 // $topbar-link-font-size: rem-calc(13);
 //$topbar-link-hover-lightness: -10%; // Darken by 10%
-// $topbar-link-bg: $topbar-bg;
+$topbar-link-bg: transparent;//$topbar-bg;
 // $topbar-link-bg-hover: -10%; // $oil;
-// $topbar-link-bg-color-hover: $charcoal;
+ $topbar-link-bg-color-hover: white;//$charcoal;
 // $topbar-link-bg-active: $primary-color;
- $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
+// $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
 // $topbar-link-text-transform: none;
 // $topbar-link-padding: ($topbar-height / 3);
@@ -1414,10 +1414,10 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-button-top: 7px;
 
 // Style the top bar dropdown elements
-// $topbar-dropdown-bg: $oil;
-// $topbar-dropdown-link-color: $white;
+$topbar-dropdown-bg: transparent;//$oil;
+$topbar-dropdown-link-color: #00A29C;//$white;
 // $topbar-dropdown-link-color-hover: $topbar-link-color-hover;
-// $topbar-dropdown-link-bg: $oil;
+ $topbar-dropdown-link-bg: white;// $oil;
 // $topbar-dropdown-link-bg-hover: $oil;
 // $topbar-dropdown-link-weight: $font-weight-normal;
 // $topbar-dropdown-toggle-size: 5px;
@@ -1428,7 +1428,7 @@ $include-html-global-classes: $include-html-classes;
 // $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: $font-weight-bold;
 // $topbar-dropdown-label-font-size: rem-calc(10);
-// $topbar-dropdown-label-bg: $oil;
+$topbar-dropdown-label-bg: white;//$oil;
 
 // Top menu icon styles
 // $topbar-menu-link-transform: uppercase;
