--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for(:comment, url: comments_path(commentable_type: commentable.class.to_s.underscore, commentable_id: commentable.id)) do |f| %>
 
   <%= f.text_area :comment, placeholder: "Write a Comment", class:"expand" %>
-  <%= f.submit "Comment!" %>
+ <div class="topperhighlight"> <%= f.submit "COMMENT", class:"topperhighlight button"%> </div>
 
 <% end %>
