--- a/app/views/treatments/_treatment.html.erb
+++ b/app/views/treatments/_treatment.html.erb
@@ -1,28 +1,46 @@
 
 
-  <div class="card">
-  <div class="row">
+  <div class="card whitebg" style="text-align: center">
+  <div class="image medium-1 columns"> 
+    <%#= image_tag(TreatmentType.find(treatment.treatment_type_id).image_path, class: "treatment-icon") %>
+  </div>
+  <div class="row ">
   <div class="content topper">
     <p class="biggerp">Treatment</p>
   </div>
-    <div class="image medium-1 columns"> 
-      <%= image_tag(TreatmentType.find(treatment.treatment_type_id).image_path, class: "treatment-icon") %>
-    </div>
-    <div class="content medium-9 columns">
-      <small class="text-muted">Here are the details of the treatment that was recommended.</small>
-      
-      <p class="card-text"><span class="fieldname">for: </span><%= treatment.treatment_for %></p>
-      <p class="card-text"><span class="fieldname">Treatment name:</span> <%= treatment.treatment_name %></p>
-      <p class="card-text"><span class="fieldname">How much/often:</span> <%= treatment.treatment_quantity %></p>
-      <p class="card-text"><span class="fieldname">Accepted by patient?</span> <% if treatment.accepted == nil %> <%= "No" %> <% else %><%= "Yes" %><% end %></p>
+
+    <div class="content medium-12 columns">
+      <small class="text-muted">Your recommended treatment for</small>
+      <p class="card-text"><p class="fieldname"></p>
+      <%= treatment.treatment_for %>
+      </p>
+      <hr class="hrstyle1">
+      <p class="card-text"><p class="fieldname">Treatment name:</p>
+       <%= treatment.treatment_name %>
+       </p>
+       <hr class="hrstyle1">
+      <p class="card-text"><p class="fieldname">How much/often:</p> 
+      <%= treatment.treatment_quantity %>
+      </p>
+      <hr class="hrstyle1">
       <p class="card-text"><small class="text-muted">Added <%= distance_of_time_in_words(Time.now, treatment.created_at) %> ago</small></p>
+      <p class="card-text">
+
+      <hr class="hrstyle1">
+      <p class="fieldname">Accepted by patient?
+
+      </p> <% if treatment.accepted == nil %> <%= "No" %> <% else %><%= "Yes" %><% end %>
+      </p>
+      
     </div>
-    <div class="action">
+    </div>
+    <div class="topperhighlight">
     <% if current_user.role != "doctor" %>
     <%= link_to "Accept", accept_treatment_path(treatment), class: "btn btn-success btn-heal" %>
     <% else %>
     <% end %>
     </div>
-    </div>
+
   </div>
+
 
